# rizz.ai

./: Dockerfile  app.py  docker-compose.yaml  pyproject.toml
api/: app.py  openai_prompt.txt  perplexity_prompt.txt  rizz_prompt.txt
