[tool.poetry]
name = "rizz"
version = "0.1.0"
description = ""
authors = ["Grossyb <grossyb@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.4"
Flask = "^2.2.3"
Pillow = "^9.5.0"
opencv-python = "^4.7.0.72"
pytesseract = "^0.3.10"
google-cloud-storage = "^3.0.0"
requests = "^2.32.3"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
